--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,5 @@
+/* Minimum supported resolution is 100x100 */
+
 #cardsContainer {
   position: absolute;
   top: 0;
@@ -27,13 +29,36 @@
   height: 100%;
   width: 100%;
   box-shadow: 2px 2px 4px 0 #061e23;
-  background-image: linear-gradient(to bottom right, #FFFFFF 0%, rgba(24, 122, 143, 0.3) 100%);
+  background-image: linear-gradient(to bottom right, #FFFFFF 0%, #789A9F 100%);
   max-width: 200px;
   max-height: 400px;
 }
 
+.card.selected {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.card.selected .card-label {
+  font-size: 150px;
+}
+
+.card:hover {
+  cursor: pointer;
+}
+
+.card:active {
+  background-image: linear-gradient(to bottom right, #FFFFFF 0%, #789A9F 100%);
+  box-shadow: 1px 1px 2px 0 #061e23;
+}
+
 .card img {
-  width: 50%;
+  width: 40%;
 }
 
 .card-label {
@@ -45,5 +70,14 @@
 @media (max-width: 310px) {
   .card-label {
     font-size: 20px;
+  }
+  .card.selected .card-label {
+    font-size: 100px;
+  }
+}
+
+@media (max-width: 200px) {
+  .card.selected .card-label {
+    font-size: 50px;
   }
 }
