--- a/style/style.css
+++ b/style/style.css
@@ -1,22 +1,31 @@
 /* Minimum supported resolution is 100x100 */
-
-#cardsContainer {
+body {
+  padding: 0;
+  margin: 0;
   position: absolute;
   top: 0;
-  bottom: 0;
   left: 0;
   right: 0;
-  padding-top: 2%;
+  bottom: 0;
+}
+
+#cardsContainer {
+  width: 100%;
+  height: 100%;
   background-color: rgba(24, 122, 143, 0.1);
   min-width: 200px;
   min-height: 200px;
+  display: table;
+}
+
+.card-row {
+  display: table-row;
+  height: 25%;
 }
 
 .card-cell {
-  display: inline-block;
+  display: table-cell;
   width: 25%;
-  height: 24%;
-  box-sizing: border-box;
   padding: 4px;
   text-align: center;
 }
