--- a/style/style.css
+++ b/style/style.css
@@ -54,6 +54,7 @@ body {
   height: 100%;
   max-width: 100%;
   max-height: 100%;
+  z-index: 1;
 }
 
 .card:hover {
@@ -62,6 +63,10 @@ body {
 
 .card:active {
   background-color: #0075b3;
+}
+
+.card.selected:active {
+  background-color: #0088cf;
 }
 
 .card img {
