--- a/style/style.css
+++ b/style/style.css
@@ -124,22 +124,44 @@ body {
   font-size: 50vw;
 }
 
+#minimizedSettingsBar.shown {
+  height: 2vh;
+  min-height: 2vw;
+}
+
+#settingsBar.shown {
+  height: 8vh;
+  min-height: 8vw;
+}
+
+#minimizedSettingsBar.shown,
+#settingsBar.shown {
+  visibility: visible;
+}
+
+#minimizedSettingsBar,
 #settingsBar {
+  visibility: hidden;
   position: fixed;
   bottom: 0;
   left: 0;
-  height: 8vh;
-  min-height: 8vw;
+  height: 0;
+  min-height: 0;
+  transition: min-height 0.3s ease-out, height 0.3s ease-out;
   width: 100%;
+}
+
+#minimizedSettingsBar,
+#settingsBar ul {
+  margin: 0;
+  padding: 0;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 #settingsBar ul {
   position: relative;
   width: 100%;
   height: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: rgba(0, 0, 0, 0.7);
 }
 
 #settingsBar ul li {
@@ -166,6 +188,28 @@ body {
 
 #aboutMenuItem .menu-button {
   background-image: url(/images/info.svg);
+}
+
+#maximizeMenuButton {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  width: 8vh;
+  min-width: 8vw;
+  height: 100%;
+  background-color: orange;
+  color: #ffffff;
+  font-weight: 800;
+  float: right;
+  margin-right: 2%;
+}
+
+#maximizeMenuButton div {
+  width: 0;
+  height: 0;
+  border-left: 1vh solid transparent;
+  border-right: 1vh solid transparent;
+  border-bottom: 1vh solid #ffffff;
 }
 
 @media all and (orientation: landscape) {
@@ -196,5 +240,13 @@ body {
 
   .card.selected .card-label.large-label {
     font-size: 50vh;
+  }
+
+  #maximizeMenuButton div {
+    width: 0;
+    height: 0;
+    border-left: 1vw solid transparent;
+    border-right: 1vw solid transparent;
+    border-bottom: 1vw solid #ffffff;
   }
 }
