--- a/style/style.css
+++ b/style/style.css
@@ -230,6 +230,30 @@ body {
   text-align: center;
 }
 
+#settingsDialog ul {
+  display: inline-block;
+  font-size: 1.2em;
+  font-style: normal;
+  list-style-type: none;
+  margin: 0;
+  overflow: auto;
+  padding: 0;
+  width: 100%;
+  height: 92vh;
+  max-height: 92vw;
+}
+
+#settingsDialog ul li {
+  border-top: 1px solid rgba(166, 166, 166, 0.2);
+  padding-bottom: 8px;
+  padding-left: 20px;
+  padding-top: 8px;
+}
+
+#settingsDialog ul li:last-child {
+  border-bottom: 1px solid rgba(166, 166, 166, 0.2);
+}
+
 /*
  * Buttons
  */
@@ -328,6 +352,33 @@ body {
 
 .dialog.choice .ok-button {
   margin-left: 1.5%;
+}
+
+/*
+ * Themes
+ */
+.orange-theme {
+  background-color: #E66000;
+}
+
+.light-orange {
+  background-color: #FF9500;
+}
+
+.blue-theme {
+  background-color: #00539F;
+}
+
+.light-blue-theme {
+  background-color: #0095DD;
+}
+
+.brown-theme {
+  background-color: #330000;
+}
+
+.charcoal-theme {
+  background-color: #4D4E53;
 }
 
 @media all and (orientation: landscape) {
