--- a/style/style.css
+++ b/style/style.css
@@ -230,17 +230,25 @@ body {
   text-align: center;
 }
 
+#settingsDialog .header {
+  font-size: 16px;
+  font-weight: 200;
+  font-family: "Fira Sans Light";
+  font-style: italic;
+  color: #A6A6A6;
+}
+
 #settingsDialog ul {
   display: inline-block;
-  font-size: 1.2em;
-  font-style: normal;
+  text-transform: capitalize;
+  font-size: 1.5em;
+  font-style: italic;
   list-style-type: none;
-  margin: 0;
+  margin: 30px 0 0;
   overflow: auto;
   padding: 0;
   width: 100%;
-  height: 92vh;
-  max-height: 92vw;
+  height: 50vh;
 }
 
 #settingsDialog ul li {
@@ -357,27 +365,37 @@ body {
 /*
  * Themes
  */
-.orange-theme {
+.theme-sample {
+  vertical-align: middle;
+  display: inline-block;
+  height: 8vh;
+  max-height: 8vw;
+  max-width: 8vw;
+  width: 8vh;
+  margin-right: 20px;
+}
+
+.orange-theme .theme-sample {
   background-color: #E66000;
 }
 
-.light-orange {
+.light-orange-theme .theme-sample {
   background-color: #FF9500;
 }
 
-.blue-theme {
+.blue-theme .theme-sample {
   background-color: #00539F;
 }
 
-.light-blue-theme {
+.light-blue-theme .theme-sample {
   background-color: #0095DD;
 }
 
-.brown-theme {
+.brown-theme .theme-sample {
   background-color: #330000;
 }
 
-.charcoal-theme {
+.charcoal-theme .theme-sample {
   background-color: #4D4E53;
 }
 
