--- a/style/style.css
+++ b/style/style.css
@@ -251,11 +251,29 @@ body {
   height: 50vh;
 }
 
+#settingsDialog ul li:hover {
+  cursor: pointer;
+}
+
 #settingsDialog ul li {
   border-top: 1px solid rgba(166, 166, 166, 0.2);
   padding-bottom: 8px;
   padding-left: 20px;
   padding-top: 8px;
+}
+
+#settingsDialog ul li.selected {
+  color: #00539F;
+}
+
+#settingsDialog ul li .label::after {
+  margin-left: 10px;
+  content: "\2714";
+  color: rgba(51, 51, 51, 0.99);
+}
+
+#settingsDialog ul li.selected .label::after {
+  color: #00539F;
 }
 
 #settingsDialog ul li:last-child {
@@ -375,27 +393,27 @@ body {
   margin-right: 20px;
 }
 
-.orange-theme .theme-sample {
+[theme=orange] .theme-sample {
   background-color: #E66000;
 }
 
-.light-orange-theme .theme-sample {
+[theme=lightOrange] .theme-sample {
   background-color: #FF9500;
 }
 
-.blue-theme .theme-sample {
+[theme=blue] .theme-sample {
   background-color: #00539F;
 }
 
-.light-blue-theme .theme-sample {
+[theme=lightBlue] .theme-sample {
   background-color: #0095DD;
 }
 
-.brown-theme .theme-sample {
+[theme=brown] .theme-sample {
   background-color: #330000;
 }
 
-.charcoal-theme .theme-sample {
+[theme=charcoal] .theme-sample {
   background-color: #4D4E53;
 }
 
