--- a/style/style.css
+++ b/style/style.css
@@ -241,14 +241,14 @@ body {
 #settingsDialog ul {
   display: inline-block;
   text-transform: capitalize;
-  font-size: 1.5em;
+  font-size: 20px;
   font-style: italic;
   list-style-type: none;
   margin: 30px 0 0;
   overflow: auto;
   padding: 0;
   width: 100%;
-  height: 50vh;
+  height: 60vh;
 }
 
 #settingsDialog ul li:hover {
@@ -398,29 +398,50 @@ body {
   background-color: #E66000;
 }
 
-[theme=lightOrange] .theme-sample,
-#cardsContainer.lightOrange .card {
-  background-color: #FF9500;
+[theme=red] .theme-sample,
+#cardsContainer.red .card {
+  background-color: red;
+}
+
+[theme=green] .theme-sample,
+#cardsContainer.green .card {
+  background-color: green;
+}
+
+[theme=yellow] .theme-sample,
+#cardsContainer.yellow .card {
+  background-color: yellow;
+  color: #000000;
 }
 
 [theme=blue] .theme-sample,
 #cardsContainer.blue .card {
-  background-color: #00539F;
-}
-
-[theme=lightBlue] .theme-sample,
-#cardsContainer.lightBlue .card {
   background-color: #0095DD;
-}
-
-[theme=brown] .theme-sample,
-#cardsContainer.brown .card {
-  background-color: #330000;
 }
 
 [theme=charcoal] .theme-sample,
 #cardsContainer.charcoal .card {
   background-color: #4D4E53;
+}
+
+[theme=white] .theme-sample,
+#cardsContainer.white .card {
+  background-color: #ffffff;
+  color: #000000;
+}
+
+#cardsContainer.yellow .card-label.infinity,
+#cardsContainer.white .card-label.infinity {
+  background-image: url(/images/infinity.svg);
+}
+
+#cardsContainer.yellow .card-label.coffee,
+#cardsContainer.white .card-label.coffee {
+  background-image: url(/images/coffee_cup.svg);
+}
+
+#cardsContainer.white {
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 @media all and (orientation: landscape) {
@@ -451,6 +472,10 @@ body {
 
   .card.selected .card-label.large-label {
     font-size: 50vh;
+  }
+
+  #settingsDialog ul {
+    height: 40vh;
   }
 
   #maximizeMenuButton div {
